# Lifeline

./: .gitignore  CMakeLists.txt  GUIDELINES.md  LICENCE.md  Makefile  README.md  TODO.md  TODO.txt
apps/Aa/: Rakefile
apps/Aa/app/: document_vc.rb  grid_view.rb  writepad.rb
apps/Aa/lib/: recognizer.rb
apps/Aa/spec/: main_spec.rb
apps/Tests/: CMakeLists.txt  DesktopApp.cpp  SymbolFileMaker.cpp  file_test.cpp
apps/iOS/: Rakefile
apps/iOS-Motion/: Rakefile
apps/iOS-Motion/app/: app_delegate.rb  document.rb  writepad.rb
apps/iOS-Motion/lib/: recognizer.rb
apps/iOS/Lifeline.xcodeproj/: project.pbxproj
apps/iOS/app/: app_delegate.rb  document_vc.rb  touchpad_vc.rb  workspace_vc.rb
apps/iOS/include/: LLAppDelegate.h  LLDocumentViewController.h  LLGridView_Debug.h  LLInfoVC_Debug.h  LLListenerProtocol.h  LLWritepad.h
apps/iOS/spec/: main_spec.rb
apps/iOS/src/: LLAppDelegate.m  LLDocumentViewController.m  LLGridView_Debug.m  LLInfoVC_Debug.m  LLWritepad.m  main.m
apps/iOS/support/: Lifeline-Info.plist  Lifeline-Prefix.pch
include/: lifeline.h
lib/: CMakeLists.txt  Makefile
lib/include/: DataStructures.h  LConfig.h  LDatabase.h  LFeatures.h  LImageProcessor.h  LListener.h  LMatch.h  LPublicTypes.h  LRecognizeAlgorithm.h  LRecognizer.h  LTestCharacters.h  LTypes.h  listener.h  recognizer.h
lib/src/: DataStructures.c  LDatabase.c  LDatabase.cpp  LFeatures.c  LFeatures.cpp  LImageProcessor.cpp  LMatch.c  LRecognizeAlgorithm.c  LRecognizer.c  LRecognizer.cpp  recognizer.c
src/: lifeline.c
(+6 files in other folders)
